# BigFeta

./: .gitignore  .travis.yml  README.rst  buildspec.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release_publish.yml
bigfeta/: bigfeta.py  jsongz.py  schemas.py  utils.py
bigfeta/distributed/: README.md  allen_example_script.pbs  cori_example_script.sl  makefile
bigfeta/distributed/src/: Singularity.petsc_solver  bigfeta_dist.h  bigfeta_dist_solve.c
bigfeta/qctools/: CheckPointMatches.py  CheckResiduals.py  CheckTransforms.py  README.md  statistics.py
bigfeta/solve/: __init__.py  solve_petsc.py  solve_scipy.py
bigfeta/solve_tools/: regularization_sweep.py
bigfeta/transform/: __init__.py  affine_model.py  polynomial_model.py  rotation_model.py  similarity_model.py  thinplatespline_model.py  transform.py  translation_model.py  utils.py
docs/: Makefile  conf.py  distributed_rm.rst  index.rst
docs/api/bigfeta/: bigfeta.rst  jsongz.rst  modules.rst  schemas.rst  transforms.rst  utils.rst
docs/user/: intro.rst
integration_tests/: test_data.py  test_file_io.py  test_jsongz.py  test_montage.py  test_petsc.py  test_plots.py  test_rough.py  test_transforms.py  test_utils.py
